Towards initial draft

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,51 @@
-<footer class="site-footer">
+<div class="site-footer">
   <div class="wrapper">
+    <ul class="adler-link-stack">
+      <li>
+        <a href="http://www.adlerplanetarium.org/">
+          <img src="https://static.squarespace.com/static/ta/50f07ce8e4b07454d6dd2f2f/1670/assets/adler-wordmark-footer.png" width="95" height="39" />
+        </a>
+      </li>
+      <li>
+        <h2>About Us</h2>
+        <ul>
+          <li><a href="http://www.adlerplanetarium.org/adler-map/">Adler Map</a></li>
+          <li><a href="http://www.adlerplanetarium.org/faq/">FAQ</a></li>
+          <li><a href="http://www.adlerplanetarium.org/about/">Adler Mission</a></li>
+        </ul>
+      </li>
+      <li>
+        <h2>Get Involved</h2>
+        <ul>
+          <li><a href="http://www.adlerplanetarium.org/membership/">Become a Member</a></li>
+          <li><a href="http://visitor.constantcontact.com/manage/optin/ea?v=001JF17rFyDmDZg56DTpOFFWVGm9FkMdQ7gXhv8tvNI_6mh7hYHJ0X_mZHCH7s1wk06D_VNztz590695Qxxam3FEPP5paGJVMxkbEzbdevUCalgcAO_gUAHPp5pjaekywpi6GeVYjjwE2I%3D" target="_blank">Sign up for e-News</a></li>
+          <li><a href="http://www.adlerplanetarium.org/annual-fund/">Give to the Adler</a></li>
+        </ul>
+      </li>
+      <li>
+        <h2>Pressroom</h2>
+        <ul>
+          <li><a href="http://www.adlerplanetarium.org/press/">Press Kits</a></li>
+          <li><a href="http://www.adlerplanetarium.org/adler-fast-facts/">Adler Fast Facts</a></li>
+          <li><a href="http://www.adlerplanetarium.org/adler-images/">Adler Images</a></li>
+        </ul>
+      </li>
+      <li>
+        <h2>Employment</h2>
+        <ul>
+          <li><a href="http://www.adlerplanetarium.org/jobs">Jobs</a></li>
+          <li><a href="http://www.adlerplanetarium.org/volunteers">Volunteering</a></li>
+        </ul>
+      </li>
+      <li>
+        <h2>Private Event Rentals</h2>
+        <ul>
+          <li><a href="http://www.adlerplanetarium.org/facility-rental/">Private Event Rentals</a></li>
+          <li><a href="http://www.adlerplanetarium.org/food-for-thought-catering/">Food for Thought Catering</a></li>
+          <li><a href="http://www.adlerplanetarium.org/private-event-rentals-faq/">Private Event Rentals FAQ</a></li>
+        </ul>
+      </li>
+    </ul>
+    <div class="footnote center">All Content Copyright © 2013 Adler Planetarium 1300 S Lake Shore Drive, Chicago, IL 60605 312.922.7827 info@adlerplanetarium.org</div>
   </div>
-</footer>
+</div>
