--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,10 +6,15 @@
   <body>
 
     {% include header.html %}
-
-    <div class="page-content">
+    
+    <div class="content-area">
       <div class="wrapper">
-        {{ content }}
+        <div class="page-content">
+          {{ content }}
+        </div>
+        <div class="page-sidebar">
+          {% include sidebar.html %}
+        </div>
       </div>
     </div>
 
