--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,13 +1,13 @@
 <div class="site-header">
   <div class="wrapper">
     <div class="header-links">
-      <div class="site-title">Girls Do Hack 2014</div>
+      <div class="site-title"><a href="./index.html">Girls Do Hack 2014</a></div>
       <div class="site-menu">
-        <div class="site-menu-item"><a href="#/the-event">The Event</a></div>
-        <div class="site-menu-item"><a href="#/sponsors">Sponsors</a></div>
-        <div class="site-menu-item"><a href="#/particpiate">Participate</a></div>
-        <div class="site-menu-item"><a href="#/contact">Contact</a></div>
-        <div class="site-menu-item focus"><a href="#/some-register-link">Register Today!</a></div>
+        <div class="site-menu-item"><a href="./index.html#the-event">The Event</a></div>
+        <div class="site-menu-item"><a href="#sponsors">Sponsors</a></div>
+        <div class="site-menu-item"><a href="./index.html#participation-options">Participate</a></div>
+        <!-- <div class="site-menu-item"><a href="./index.html#contact">Contact</a></div> -->
+        <div class="site-menu-item focus"><a href="https://docs.google.com/a/zooniverse.org/forms/d/1fByWdkPJzGFGOj7SQJEjuy1ZqxPXQsAAFQgxxmpl8tk/viewform">Register Today!</a></div>
       </div>
     </div>
   </div>
@@ -15,4 +15,4 @@
 
 <div class="site-picture"></div>
 
-<div class="wrapper">{% include participate.html %}</div>
+<div class="wrapper">{% include participation-options.html %}</div>
