--- a/_sass/_layout.sass
+++ b/_sass/_layout.sass
@@ -15,6 +15,10 @@ $header-height: 80px
       font-weight: 700
       text-transform: uppercase
 
+      a
+        color: inherit
+        text-decoration: none
+
     .site-menu-item
       display: inline-block
       line-height: $header-height
@@ -64,6 +68,19 @@ $header-height: 80px
 
       table
         width: 100%
+
+.site-sponsors
+  background: $purple
+  color: white
+  font-size: 22px
+  font-weight: 100
+  letter-spacing: 2px
+  padding: 25px 0
+  text-align: center
+  text-transform: uppercase
+
+  b
+    font-size: 40px
 
 .site-footer
   background: $salmon
