--- a/_sass/_options.sass
+++ b/_sass/_options.sass
@@ -3,7 +3,10 @@
   display: flex
 
   .option
+    color: inherit
+    display: block
     padding: 35px 25px
+    text-decoration: none
     width: 25%
 
     &:nth-child(2n + 1)
