Add photos, deploy script

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
     <ul class="adler-link-stack">
       <li>
         <a href="http://www.adlerplanetarium.org/">
-          <img src="https://static.squarespace.com/static/ta/50f07ce8e4b07454d6dd2f2f/1670/assets/adler-wordmark-footer.png" width="95" height="39" />
+          <img src="./images/adler-logo.png" width="95" height="39" />
         </a>
       </li>
       <li>
