--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -1,6 +1,6 @@
 <a name="sponsors"></a>
 <div class="site-sponsors">
   <div class="wrapper">
-    Girls Do Hack is presented by <b>Teza</b>
+    Girls Do Hack is presented by <img src="./images/teza-logo.jpg">
   </div>
 </div>
