Add IE prefixes

--- a/_sass/_layout.sass
+++ b/_sass/_layout.sass
@@ -6,10 +6,13 @@ $header-height: 80px
   height: $header-height
 
   .header-links
+    -ms-align-items: center
     -webkit-align-items: center
     align-items: center
+    display: -ms-flexbox
     display: -webkit-flex
     display: flex
+    -ms-justify-content: space-between
     -webkit-justify-content: space-between
     justify-content: space-between
 
@@ -50,6 +53,7 @@ $header-height: 80px
   padding: 30px 0
 
   .wrapper
+    display: -ms-flexbox
     display: -webkit-flex
     display: flex
 
