add partners section with logos

--- a/_sass/_layout.sass
+++ b/_sass/_layout.sass
@@ -92,6 +92,21 @@ $header-height: 80px
     margin: -5px 15px 0 15px
     vertical-align: middle
 
+.site-partners
+  background: #eaeaea
+  padding: 20px 0
+  text-align: center
+
+  .partners-title
+    color: $purple
+    font-size: 18px
+    font-weight: 700
+    margin: 0 0 15px 0
+
+  img
+    margin: 0 30px
+    max-height: 90px
+
 .site-footer
   background: $salmon
   color: white
