--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -4,3 +4,13 @@
     Girls Do Hack is presented by <a href="http://www.teza.com/"><img src="./images/teza-logo.jpg"></a>
   </div>
 </div>
+<div class="site-partners">
+  <div class="wrapper">
+    <div class="partners-title">Our Partners</div>
+    <div class="partner-logos">
+      <img src="./images/fuse-logo.png">
+      <img src="./images/codecreate-logo.png">
+      <img src="./images/ywca-logo.png">
+    </div>
+  </div>
+</div>
