--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,14 +1,14 @@
 <div class="site-header">
   <div class="wrapper">
     <div class="header-links">
-      <div class="site-title"><a href="./index.html">Girls Do Hack 2014</a></div>
+      <div class="site-title"><a href="./index.html">Girls Do Hack 2015</a></div>
       <div class="site-menu">
         <div class="site-menu-item"><a href="./index.html#the-event">The Event</a></div>
         <div class="site-menu-item"><a href="#sponsors">Sponsors</a></div>
         <div class="site-menu-item"><a href="./index.html#participation-options">Participate</a></div>
         <!-- <div class="site-menu-item"><a href="./index.html#contact">Contact</a></div> -->
-        <div class="site-menu-item focus"><a href="https://docs.google.com/a/zooniverse.org/forms/d/1fByWdkPJzGFGOj7SQJEjuy1ZqxPXQsAAFQgxxmpl8tk/viewform">Register Today!</a></div>
-      </div>
+        <div class="site-menu-item focus"><a href="./index.html#participation-options">Register starting 10/1/2015</a></div>
+      </div> <!-- <10/1/2015 need to change text to Register! -->
     </div>
   </div>
 </div>
