--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -5,7 +5,7 @@
 
 <div class="sidebar-section">
   <h2>Schedule:</h2>
-  <h4>Cohort 1</h4>
+  <h4>Group 1</h4>
   <table>
     <tbody>
       <tr>
@@ -17,15 +17,15 @@
         <td>Kick-Off</td>
       </tr>
       <tr>
-        <td><b>9:30 am</b></td>
+        <td><b>10:15 am</b></td>
         <td>Workshop 1</td>
       </tr>
       <tr>
-        <td><b>10:55 am</b></td>
+        <td><b>11:45 am</b></td>
         <td>Workshop 2</td>
       </tr>
       <tr>
-        <td><b>12:10 pm</b></td>
+        <td><b>12:20 pm</b></td>
         <td>Lunch</td>
       </tr>
       <tr>
@@ -43,35 +43,39 @@
     </tbody>
   </table>
 
-  <h4>Cohort 2</h4>
+  <h4>Group 2</h4>
   <table>
     <tbody>
       <tr>
-        <td><b>10:30 am</b></td>
+        <td><b>10:00 am</b></td>
         <td>Registration</td>
       </tr>
       <tr>
-        <td><b>11:30 am</b></td>
+        <td><b>10:30 am</b></td>
+        <td>Kick-Off</td>
+      </tr>
+      <tr>
+        <td><b>11:45 am</b></td>
         <td>Workshop 1</td>
       </tr>
       <tr>
-        <td><b>12:45 pm</b></td>
+        <td><b>1:00 pm</b></td>
         <td>Lunch</td>
       </tr>
       <tr>
-        <td><b>1:30 pm</b></td>
+        <td><b>1:45 pm</b></td>
         <td>Workshop 2</td>
       </tr>
       <tr>
-        <td><b>3:00 pm</b></td>
+        <td><b>2:40 pm</b></td>
         <td>Workshop 3</td>
       </tr>
       <tr>
-        <td><b>4:15 pm</b></td>
+        <td><b>4:00 pm</b></td>
         <td>Wrap-Up</td>
       </tr>
       <tr>
-        <td><b>4:45 pm</b></td>
+        <td><b>4:30 pm</b></td>
         <td>Depart</td>
       </tr>
     </tbody>
@@ -83,8 +87,8 @@
 </div>
 
 <div class="sidebar-section">
-  <a href="http://instagram.com/adlerskywatch"><i class="fa fa-instagram"></i></a>
-  <a href="https://twitter.com/adlerskywatch"><i class="fa fa-twitter"></i></a>
+  <a href="http://instagram.com/adlersplanet"><i class="fa fa-instagram"></i></a>
+  <a href="https://twitter.com/adlerplanet"><i class="fa fa-twitter"></i></a>
   <a href="https://www.facebook.com/adlerplanetarium"><i class="fa fa-facebook"></i></a>
 
   <h4>Questions?</h4>
