--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -8,8 +8,8 @@
   <div class="wrapper">
     <div class="partners-title">Our Partners</div>
     <div class="partner-logos">
-      <img src="./images/fuse-logo.png">
-      <img src="./images/codecreate-logo.png">
+      <!-- <img src="./images/fuse-logo.png">  -->
+      <!-- <img src="./images/codecreate-logo.png"> -->
       <img src="./images/ywca-logo.png">
     </div>
   </div>
