Updated Header Text

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
         <div class="site-menu-item"><a href="#sponsors">Sponsors</a></div>
         <div class="site-menu-item"><a href="./index.html#participation-options">Participate</a></div>
         <!-- <div class="site-menu-item"><a href="./index.html#contact">Contact</a></div> -->
-        <div class="site-menu-item focus"><a href="./index.html#participation-options">Register starting 10/1/2015</a></div>
+        <div class="site-menu-item focus"><a href="./index.html#participation-options">Registration opens October 1st!</a></div>
       </div> <!-- <10/1/2015 need to change text to Register! -->
     </div>
   </div>
