Updated Header image

--- a/_sass/_layout.sass
+++ b/_sass/_layout.sass
@@ -43,7 +43,7 @@ $header-height: 80px
         text-decoration: none
 
 .site-picture
-  background-image: url(../images/gdh-hero.jpg)
+  background-image: url(../images/gdh-header-3 copy.jpg)
   background-position: center
   background-repeat: no-repeat
   background-size: cover
@@ -145,3 +145,14 @@ $header-height: 80px
 
   a, h1, h2, h3, h4, h5, h6, p
     color: inherit
+
+blockquote.sponsorship
+  font-size: 90%
+  img
+    float: left
+    height: 12em
+    margin: 0 1em 1em 0
+  cite
+    display: block
+    margin-left: 70%
+    margin-top: 0.5em
