--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,6 +13,8 @@
   </div>
 </div>
 
-<div class="site-picture"></div>
+<div class="site-picture">
+  <div class="wrapper"></div>
+</div>
 
 <div class="wrapper">{% include participation-options.html %}</div>
