--- a/_sass/_layout.sass
+++ b/_sass/_layout.sass
@@ -43,7 +43,7 @@ $header-height: 80px
         text-decoration: none
 
 .site-picture
-  background-image: url(../images/gdh-header-3 copy.jpg)
+  background-image: url(../images/gdh-header-3copy.jpg)
   background-position: center
   background-repeat: no-repeat
   background-size: cover
